--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,10 @@
             </plugin>
         </plugins>
     </build>
-
+    <developers>
+	<developer>
+		<name>Hamilton Junior</name>
+		<email>hamilton.junior96@yahoo.com.br</email>
+        </developer>
+    </developers>
 </project>
