--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <version>2.2.12</version>
         </dependency>
         
+        <dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.9.9</version>
+		</dependency>
+        
         <!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 		    <groupId>junit</groupId>
